# huffman

./: CMakeLists.txt  CompareNode.cpp  CompareNode.h  FileUtils.cpp  FileUtils.h  HuffmanCompressor.cpp  HuffmanCompressor.h  HuffmanDecompressor.cpp  HuffmanDecompressor.h  HuffmanNode.cpp  HuffmanNode.h  HuffmanTree.cpp  HuffmanTree.h  README.md  input.txt  main.cpp
